# multiplied

./: .buildinfo  .gitignore  CITATION.cff  README.md  ROADMAP.md  changelog.html  contact.html  genindex.html  guide.html  index.html  intro.html  objects.inv  py-modindex.html  pyproject.toml  reference.html  requirements.txt  search.html  searchindex.js  start.html
.doctrees/: changelog.doctree  contact.doctree  environment.pickle  guide.doctree  index.doctree  intro.doctree  reference.doctree  start.doctree
.doctrees/api/: modules.doctree  multiplied.analysis.doctree  multiplied.core.doctree  multiplied.core.templates.doctree  multiplied.core.utils.doctree  multiplied.doctree  multiplied.io.doctree  multiplied.tests.analysis.doctree  multiplied.tests.core.doctree  multiplied.tests.core.utils.doctree  multiplied.tests.doctree  multiplied.tests.io.doctree
.doctrees/guide/: analysis.doctree  complex.doctree  overview.doctree  quickstart.doctree  structures.doctree  truthtable.doctree  visualisation.doctree
.github/workflows/: code_quality.yml  release.yml
_modules/: index.html
_modules/multiplied/: tests.html
_sources/api/: multiplied.tests.rst.txt
_sources/guide/: complex.md.txt  overview.md.txt  visualisation.md.txt
_static/: custom.css  documentation_options.js  light-dark.css
api/: modules.html  multiplied.analysis.html  multiplied.core.html  multiplied.core.templates.html  multiplied.core.utils.html  multiplied.html  multiplied.io.html  multiplied.tests.analysis.html  multiplied.tests.core.html  multiplied.tests.core.utils.html  multiplied.tests.html  multiplied.tests.io.html
docs/algorithms/: saturation.md
docs/reference/: apidoc.sh  wallace_plots.py
guide/: analysis.html  complex.html  overview.html  quickstart.html  structures.html  truthtable.html  visualisation.html
multiplied/: __init__.py
multiplied/analysis/: extract.py  (+2 more)
(+141 files in other folders)
