[project]
name = "multiplied"
version = "0.8.1"
description = "A powerful tool to build, test, and analyse multiplier designs."
readme = "README.md"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "pyarrow>=23.0.0",
    "toml>=0.10.2",
]

[project.urls]
Homepage = "https://github.com/KMnO4-158/multiplied"
Issues = "https://github.com/KMnO4-158/multiplied/issues"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.8-1"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "multiplied"
module-root = ""

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "sphinx<=9.1.0",
    "docutils==0.21.2",
    "sphinx-breeze-theme>=0.6.0",
    "myst-parser>=5.0.0",
    "pyright>=1.1.408",
    "pytest-cov>=7.0.0",
    "sphinx-design>=0.7.0",
    "sphinx-copybutton>=0.5.2",
    "myst-nb>=1.3.0",
]
